--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^1.1.5",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.14.0",
     "web-vitals": "^1.1.2"
   },
